--- a/src/app/user/signup/signup.component.html
+++ b/src/app/user/signup/signup.component.html
@@ -1,6 +1,4 @@
-<p>
-signup works!
-</p><nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
   <a class="navbar-brand" href="/">My Chat</a>
 
